--- a/theme/assets/theme.css
+++ b/theme/assets/theme.css
@@ -121,6 +121,14 @@ a:hover, a:active {
 /*  font-size: 16px;*/
 }
 
+.anvil-role-inline-popup {
+  box-shadow: 0px 10px 30px rgba(0, 0, 0, 0.8) !important;
+  padding: 10px !important;
+  margin: 10px !important;
+  border: 1px solid #ccc !important;
+  border-radius: 4px !important;
+}
+
 .anvil-role-subheading {
   font-size: 16px;
   line-height: 24dp;
